@@ -547,6 +547,8 @@ Some default configuration options have changed:
 * (bug 2316) Add "caption" attribute to <gallery> tag
 * Allow setting the skin object that ImageGallery will use; needed during parse
   operations (the skin must come from the ParserOptions, not $wgUser)
+* Fix notice in MacBinary detection debug data for files of certain lengths
+
 
 == Compatibility ==
 
